@@ -92,18 +92,19 @@
  *
  * Define if you wish to use the 'long double' type.
  */
-// MM: At least '%Lg' printing completely fails (seg.fault) with Mingw gcc 4.9.x, R-devel 2019-10-10 :
+#define HAVE_LONG_DOUBLE 1
+/* no longer needed :------
 #ifndef _WIN32
 #define HAVE_LONG_DOUBLE 1
 #else // Windows:
 #  ifdef _WIN64
-     // .....
+#    define HAVE_LONG_DOUBLE 1
 #  else // Windows 32 bit
 #    define HAVE_LONG_DOUBLE 1
 #  endif
 #endif
+*/
 
-/* Required by C99, but might be slow */
 /* Required by C99, but might be slow */
 #ifdef HAVE_LONG_DOUBLE
 # define LDOUBLE long double
@@ -119,19 +120,7 @@
 # define LOG1p log1pl
 // Rmpfr: log(mpfr(2, 130)) {130 bits is "more than enough": most long_double are just 80 bits!}
 # define M_LN2_ 0.6931471805599453094172321214581765680755L
-
-/* #ifndef _WIN32 */
-/* #  define PR_g_ "Lg" */
-/* #else // Windows: '%Lg' printing completely fails (seg.fault) with Mingw gcc 4.9.x, R-devel 2019-10-10 */
-/* #  define __USE_MINGW_ANSI_STDIO 1 */
-/* #  ifdef _WIN64 */
-/* #    define PR_g_ "Lg" */
-/* #  else // Windows 32 bit */
-/* #    define PR_g_ "Lg" */
-/* #  endif */
-/* #endif */
 # define PR_g_ "Lg"
-
 # ifdef _WIN32 // all of Windows (such that "%Lg" works)
 #   define __USE_MINGW_ANSI_STDIO 1
 # endif
@@ -191,7 +180,9 @@ void ncbeta(double *a, double *b, double *lambda, double *x, int *n,
 
 // ppois-direct.c : ------------------------------------------------------------
 
-SEXP ppoisD(SEXP X, SEXP lambda_, SEXP all_from_0_)
+SEXP chk_LDouble(SEXP lambda_, SEXP verbose_, SEXP tol_)
+    ;
+SEXP ppoisD(SEXP X, SEXP lambda_, SEXP all_from_0_, SEXP verbose_)
     ;
 
 // wienergerm_nchisq.c : -------------------------------------------------------
