@@ -4,7 +4,7 @@
 \title{DPQ News}
 \encoding{UTF-8}
 
-\section{Version 0.3-5 (2019-10-18, svn r128)}{
+\section{Version 0.3-5 (2019-10-18, svn r129)}{
   \subsection{NEW FEATURES}{
     \itemize{
       \item \code{pnbetaAS310()} gained a \code{useAS226} option.
@@ -12,6 +12,12 @@
       \item New \code{okLongDouble()} function, notably for detecting that
       with a \command{valgrind}ed version of \R, \code{long double} C
       arithmetic seems to silently switch to (simple) \code{double} precision.
+    }
+  }
+  \subsection{BUG FIXES}{
+    \itemize{
+      \item long double printing from C now should happen correctly on all
+      platforms including 32- and 64-bit Windows.
     }
   }
 }
